# prometheus-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy-pages.yml  docker-release.yml  release.yml  rust.yml
docs/: README.md  claude-desktop.md  configuration.md  debugging.md  docker.md  env.d.ts  package.json  pnpm-lock.yaml  tools.md  tsconfig.json  usage.md
docs/.vitepress/: config.mts  nav.mts  sidebar.mts  version.mts
docs/.vitepress/theme/: index.ts  override.css
docs/.vitepress/theme/components/: DownloadButtons.vue  HeaderLinks.vue  InstallButtons.vue
docs/src/: claude-desktop.md  configuration.md  debugging.md  docker.md  index.md  installation.md  tools.md  usage.md
docs/src/clients/: cursor.md  inspector.md  vscode.md  windsurf.md  zed.md
src/: lib.rs  main.rs
src/mcp/: compat.rs  exporter.rs  metrics.rs  mod.rs  prometheus_client.rs  prometheus_config.rs  prompts.rs  repository.rs  resources.rs  tools.rs  types.rs  utilities.rs
tests/: e2e_mcp_test.rs  schema_tests.rs  tools_tests.rs
