[package]
name = "prometheus-mcp"
version = "0.0.2"
edition = "2021"
authors = ["Breno A. <me@breno.tech>"]
description = "Prometheus Model Context Protocol (MCP) Rust server"
keywords = ["prometheus", "mcp", "observability", "metrics", "jsonrpc"]
categories = ["command-line-utilities", "api-bindings", "network-programming", "web-programming::http-client"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/brenoepics/prometheus-mcp"
homepage = "https://github.com/brenoepics/prometheus-mcp"
documentation = "https://docs.rs/prometheus-mcp"
rust-version = "1.82"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
  "docs/**",
  "tests/**",
  "examples/**",
]

[badges]
docsrs = { }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
rpc-router = "0.1.3"
maplit = "1"
clap = { version = "4.5", features = ["derive", "env"] }
prometheus = "0.14.0"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12.23", features = ["json"] }
lazy_static = "1.4"
async-trait = "0.1"
once_cell = "1.19"
url = { version = "2", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
